# artifacts/api-server/src/routes/index.ts
@@ -11,8 +11,6 @@ import stickersRouter from "./stickers";
 import foldersRouter from "./folders";
 import callsRouter from "./calls";
 import numbersRouter from "./numbers";
-import starsRouter from "./stars";
-import premiumRouter from "./premium";
 import anonInboxRouter from "./anon-inbox";
 import pushRouter from "./push";
 import pollsRouter from "./polls";
@@ -31,8 +29,6 @@ router.use(activityLogRouter);
 router.use(stickersRouter);
 router.use(foldersRouter);
 router.use(callsRouter);
-router.use(starsRouter);
-router.use(premiumRouter);
 router.use(anonInboxRouter);
 router.use(pushRouter);
 router.use(pollsRouter);
